deploy/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: studio-frontend
  name: studio-frontend
  namespace: acedatacloud-test
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: studio-frontend
  template:
    metadata:
      labels:
        app: studio-frontend
    spec:
      containers:
        - image: ghcr.io/acedatacloud/studio-frontend:${TAG}
          name: studio-frontend
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '50Mi'
              cpu: '20m'
            limits:
              memory: '100Mi'
              cpu: '30m'
          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
      imagePullSecrets:
        - name: docker-registry
      restartPolicy: Always
