deploy/test/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hub-frontend
  namespace: zhishuyun-test
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - hub.test.zhishuyun.com
      secretName: tls-wildcard-test-zhishuyun-com
  rules:
    - host: hub.test.zhishuyun.com
      http:
        paths:
          - backend:
              serviceName: hub-frontend
              servicePort: 8083
            path: /
